src/App.css
/* general */
* {
    box-sizing: border-box;
    margin: 0;
    font-family: sans-serif;
}

:root {
    --gap: 7px;
    --hoverScale: 1.025;
    --colSize: 200px;
    --rowSize: 150px;
    --size: 1;
}

#root {
    display: flex;
    flex-direction: column;
    height: 100vh;
    padding: calc(var(--gap) * 2) var(--gap) 0 var(--gap);
}

.fas {
    color: black;
}

/* grid */

.grid {
    overflow: scroll;
    flex-grow: 1;
    display: grid;
    /* grid-gap: var(--gap); */
    grid-template-columns: 1fr;
}

.grid img {
    height: 100%;
    width: 100%;
    object-fit: cover;
    padding: calc(var(--gap) / 2);
    border-radius: 10px;
}

.photoCard {
    padding: calc(var(--gap) / 2);
    transition: 200ms;
}

.photoCard:hover {
    transform: scale(var(--hoverScale));
    padding: calc(var(--gap) / 2);
    transition: transform 200ms;
}
.author:hover {
    transform: scale(1.025);
}
.links a:hover {
    transform: scale(1.1);
}

.loading,
.error {
    margin: auto;
}

.error {
    color: #f44336;
}

/* modal */
.modal {
    position: absolute;
    background: white;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    display: flex;
    flex-direction: column;
    padding: 10px;
}

.modalImg {
    height: 200px;
    flex-grow: 1;
    margin-bottom: 10px;
    object-fit: contain;
}

.authorCard {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50px;
}

.authorCard img {
    max-height: 50px;
    max-width: 50px;
    border-radius: 50%;
    margin-right: 10px;
}

.author {
    display: flex;
    align-items: center;
    text-decoration: none;
    color: black;
    margin-right: 50px;
}

.name {
    font-weight: bold;
}

.links {
    display: flex;
    justify-content: space-around;
    width: 100px;
}

@keyframes modalIn {
    from {
        transform: scale(0.8);
        opacity: 0;
    }
    to {
        transform: scale(1);
        opacity: 1;
    }
}
@keyframes modalOut {
    from {
        opacity: 1;
    }
    to {
        opacity: 0;
    }
}
@keyframes backgroundIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 0.5;
    }
}
@keyframes backgroundOut {
    from {
        opacity: 0.5;
    }
    to {
        opacity: 0;
    }
}

/* settings */
nav {
    display: none;
}

/* media queries */
@media (min-width: 400px) {
    /* grid */
    .grid {
        grid-template-columns: repeat(
            auto-fit,
            minmax(calc(var(--colSize) * var(--size)), 1fr)
        );
        grid-auto-rows: calc(var(--rowSize) * var(--size));
        grid-auto-flow: dense;
    }
    .horizontal {
        grid-area: span 1 / span 1;
    }
    .vertical {
        grid-area: span 2 / span 1;
    }
    /* .big.vertical {
      grid-area: span 4 / span 2;
  } */
    .big.horizontal {
        grid-area: span 2 / span 2;
    }

    /* modal */
    .modal {
        top: 50px;
        bottom: 50px;
        right: 50px;
        left: 50px;
        border-radius: 10px;
    }

    .background {
        position: fixed;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        background: black;
        opacity: 0.5;
    }

    /* settings */
    nav {
        display: flex;
        justify-content: center;
        min-height: 30px;
        background: white;
        transition: 300ms;
        margin: 15px;
    }

    nav div {
        display: flex;
        align-items: center;
        margin: 5px 15px;
    }

    nav div p {
        margin: 0 3px;
    }

    nav .popular p {
        margin-right: 10px;
    }

    nav div button {
        border: none;
        cursor: pointer;
    }

    nav .fa-arrow-up:hover {
        transform: translateY(-2px);
    }
    nav .fa-arrow-down:hover {
        transform: translateY(2px);
    }

    nav div i {
        font-size: 1rem;
    }
}

